<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/llPedidos"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="#872C2C"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tlPedidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tvPedidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPedidos"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tlPedidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/trHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F1CDCD">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvId"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvPeso"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOrigen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvOrigen"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDestino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvDestino"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvConfirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvConfirmar"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/tvId2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3_7"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/san_lorenzo_145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/corrientes_312"
                android:textAlignment="center"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1CDCD">

            <TextView
                android:id="@+id/tvId3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_30_0"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/san_lorenzo_145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/suipacha_984"
                android:textAlignment="center"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/tvId4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_20_1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/san_lorenzo_145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/saavedra_413"
                android:textAlignment="center"
                android:textColor="#000000" />

            <CheckBox
                android:id="@+id/checkBox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/llAceptados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#872C2C"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="-128dp"
        tools:layout_editor_absoluteY="312dp">

        <TextView
            android:id="@+id/tvPedidosAsignados"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPedidosAsignados"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tlAceptados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/llAceptados"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/trHeadAcep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F1CDCD">

            <TextView
                android:id="@+id/tvIdAcep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvId"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPesoAcep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvPeso"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOrigenAcep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvOrigen"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDestinoAcep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvDestino"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTelefonoAcep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvTelefono"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/tvId2Acep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso2Acep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3_66"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen2Acep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/san_lorenzo_145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino2Acep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/corrientes_312"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvFletero2Acep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_342_4523633"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1CDCD">

            <TextView
                android:id="@+id/tvId3Acep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso3Acep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_30_0"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen3Acep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/san_lorenzo_145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino3Acep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suipacha_984"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvFletero3Acep"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3437_492344"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/tvId4Acep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso4Acep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_20_1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen4Acep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/san_lorenzo_145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino4Acep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/saavedra_413"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvFletero4Acep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_342_4588999"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
