<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AD4242"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#872424"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tlAceptados"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/tvPedidosAsignados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvMisPedidos"
            android:textAlignment="center"
            android:textSize="20dp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tlAceptados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TableRow
            android:id="@+id/trHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F1CDCD">

            <TextView
                android:id="@+id/tvId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/tvId"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPeso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvPeso"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvOrigen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvOrigen"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDestino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvDestino"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvConfirmar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tvFletero"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/tvId2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="3.7"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="San Lorenzo 145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Corrientes 312"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvFletero2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Manuel"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F1CDCD">

            <TextView
                android:id="@+id/tvId3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="2"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="30.0"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="San Lorenzo 145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Suipacha 984"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvFletero3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="No asignado"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/tvId4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="3"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvPeso4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="20.1"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvOrigen4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="San Lorenzo 145"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvDestino4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Saavedra 413"
                android:textAlignment="center"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvFletero4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Roberto"
                android:textAlignment="center"
                android:textColor="#000000" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>